🌄 Style overview page and set new primary color

--- a/src/pages/login/overview/overview.html
+++ b/src/pages/login/overview/overview.html
@@ -1,19 +1,11 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Login
-    </ion-title>
-  </ion-navbar>
-</ion-header>
 <ion-content>
   <ion-card>
-    <img src="assets/city-map.jpg" style="max-width:250px;margin: 0 auto;">
+    <img src="assets/overview-header.png">
     <ion-card-content>
-      <ion-card-title>
-        To Track
-      </ion-card-title>
       <p>Using To Track you are able to easily track hours based on location.</p>
+      <h2>Sign up</h2>
       <p>You are able to signup via email, or connect a Google account.</p>
+      <h2>Privacy</h2>
     </ion-card-content>
   </ion-card>
 </ion-content>
